--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <h2>Lorem ipsum dolor sit amet consectetur.</h2>
                     <p class="lead text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit repellendus commodi eum consectetur nulla!</p>
 
-                    <form class="mt-6" action="enviar2.php">
+                    <form class="mt-6" method="post" action="enviar2.php">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Name" name="nombre">
                         </div>
